tests/specs/ecosystem/open_fn/core/0_0_2.test
open-fn/core/0.0.2
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
export type ServerOptions = Deno.ServeOptions | Deno.ServeTlsOptions;
                                                     ~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/server/server.ts:4:54

error: Type checking failed.

